--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Backend API Configuration
-VITE_API_BASE_URL=http://localhost:5000/api
+# Use your computer's local IP address for network access from other devices
+VITE_API_BASE_URL=https://imts-task-backend.onrender.com/api
 
 # Environment
 VITE_NODE_ENV=development
