--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Backend API Configuration
 # Use your computer's local IP address for network access from other devices
-VITE_API_BASE_URL=https://imts-task-backend.onrender.com/api
+VITE_API_BASE_URL=http://192.168.0.114:5000/api
 
 # Environment
 VITE_NODE_ENV=development
