--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^11.0.5",
-    "vite": "^4.5.3"
+    "vite": "^4.5.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
